--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "mdbreact": "^5.0.1",
+    "next": "^10.0.5",
     "react": "^17.0.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactstrap": "^8.8.1",
+    "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
